--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
@@ -40,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:layout_marginBottom="5dp"
                     android:orientation="horizontal">
 
                     <Button
@@ -90,19 +90,214 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/buttonSeven"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="7"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonEight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="8"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonNine"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="9"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+
+                    <Button
+                        android:id="@+id/buttonMultiply"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#FF9500"
+                        android:text="x"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/buttonFour"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="4"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonFive"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="5"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonSix"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="6"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonSubstract"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#FF9500"
+                        android:text="-"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/buttonOne"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="1"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonTwo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="2"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonThree"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="3"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonPlus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#FF9500"
+                        android:text="+"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/buttonZero"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="21"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text="0"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonComma"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginRight="5dp"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#505050"
+                        android:text=","
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                    <Button
+                        android:id="@+id/buttonEqual"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/circlebutton"
+                        android:backgroundTint="#FF9500"
+                        android:text="="
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
+                </LinearLayout>
+            </TableRow>
         </TableLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
