rounded rectangle added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -268,9 +268,9 @@
                         android:id="@+id/buttonZero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="21"
+                        android:layout_weight="0.5"
                         android:layout_marginRight="5dp"
-                        android:background="@drawable/circlebutton"
+                        android:background="@drawable/roundedrectangle"
                         android:backgroundTint="#505050"
                         android:text="0"
                         android:textColor="#FFFFFF"
@@ -279,7 +279,7 @@
                         android:id="@+id/buttonComma"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:layout_marginRight="5dp"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
@@ -290,7 +290,7 @@
                         android:id="@+id/buttonEqual"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#FF9500"
                         android:text="="
