--- a/app/src/main/res/drawable/roundedrectangle.xml
+++ b/app/src/main/res/drawable/roundedrectangle.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="#D4D4D2"/>
-            <size android:width="80dp" android:height="80dp"/>
+            <size android:height="80dp"/>
+            <corners android:radius="75dp"/>
         </shape>
     </item>
 </selector>
