--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1C1C1C"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
+        android:gravity="bottom"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -25,6 +28,7 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:textAlignment="textEnd"
+            android:textColor="#FFFFFF"
             android:textSize="64sp" />
 
         <TableLayout
@@ -33,21 +37,21 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/buttonClear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:text="C"
                         android:textColor="#1C1C1C"
@@ -57,8 +61,8 @@
                         android:id="@+id/buttonPlusOrMinus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:text="+/-"
                         android:textColor="#1C1C1C"
@@ -68,8 +72,8 @@
                         android:id="@+id/buttonPercent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:text="%"
                         android:textColor="#1C1C1C"
@@ -90,42 +94,45 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/buttonSeven"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="7"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonEight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="8"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonNine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="9"
@@ -147,46 +154,51 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/buttonFour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="4"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonFive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="5"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonSix"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="6"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonSubstract"
                         android:layout_width="wrap_content"
@@ -202,46 +214,51 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/buttonOne"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="1"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonTwo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="2"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonThree"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text="3"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonPlus"
                         android:layout_width="wrap_content"
@@ -258,34 +275,38 @@
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal">
+
                     <Button
                         android:id="@+id/buttonZero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="0.5"
                         android:background="@drawable/roundedrectangle"
                         android:backgroundTint="#505050"
                         android:text="0"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonComma"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="0"
                         android:background="@drawable/circlebutton"
                         android:backgroundTint="#505050"
                         android:text=","
                         android:textColor="#FFFFFF"
                         android:textSize="24sp" />
+
                     <Button
                         android:id="@+id/buttonEqual"
                         android:layout_width="wrap_content"
